--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.18.3"
+    "express": "^4.19.2",
+    "fund": "^1.0.0",
+    "react-router-dom": "^6.22.3"
   }
 }
